# zero-optimization

./: pyproject.toml
app/: hooke_jeeves.py  main.py  nelder_mead.py  powell.py  test.py  utils.py
