[tool.poetry]
name = "zero-optimization"
version = "0.1.0"
description = ""
authors = ["Grig Alex <alexengrigdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sympy = "^1.13.3"
numpy = "^2.1.3"
scipy = "^1.14.1"
pytest = "^8.3.3"
tabulate = "^0.9.0"
matplotlib = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
